--- a/README.rdoc
+++ b/README.rdoc
@@ -38,6 +38,6 @@ The response is in the form of geojson. Example:
 ```
 
 If there are more time provided, the following things can be improved:
-- an interactive views
+- interactive views
 - make the tests for the API
 - pagination via web linking
